# migs-tracklist

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
migshazam/: __init__.py  audd.py  audioio.py  cli.py  cluster.py  ingest.py  models.py  output.py  recognize.py  scan.py  verify.py
tests/: test_audd.py  test_audioio.py  test_cli.py  test_cluster.py  test_models.py  test_output.py  test_recognize.py  test_scan.py  test_verify.py
