[project]
name = "migshazam"
version = "0.1.0"
description = "Identify the songs in a DJ mix (YouTube/SoundCloud link or local file) by windowed Shazam fingerprinting."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "shazamio>=0.8.1",
    "yt-dlp[default]>=2025.11.12",
]

[project.scripts]
migshazam = "migshazam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["migshazam"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
